Fixed issue where the Date header wouldn't update on request retry